--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,10 +14,10 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="dijkstraButton">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>10</x>
       <y>20</y>
       <width>89</width>
       <height>25</height>
@@ -27,10 +27,10 @@
      <string>Dijkstra</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="aStarButton">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>110</x>
       <y>20</y>
       <width>89</width>
       <height>25</height>
@@ -38,16 +38,6 @@
     </property>
     <property name="text">
      <string>A*</string>
-    </property>
-   </widget>
-   <widget class="QCustomPlot" name="customPlot" native="true">
-    <property name="geometry">
-     <rect>
-      <x>1160</x>
-      <y>570</y>
-      <width>71</width>
-      <height>81</height>
-     </rect>
     </property>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget">
@@ -65,10 +55,10 @@
      </property>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>540</x>
       <y>20</y>
       <width>89</width>
       <height>25</height>
@@ -81,17 +71,17 @@
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>0</y>
-      <width>341</width>
-      <height>41</height>
+      <x>910</x>
+      <y>10</y>
+      <width>311</width>
+      <height>31</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="rrtButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>210</x>
       <y>20</y>
       <width>89</width>
       <height>25</height>
@@ -193,7 +183,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="insertObstacleButton">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -206,7 +196,7 @@
      <string>Insert Obstacle</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="randomizeButton">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -217,6 +207,123 @@
     </property>
     <property name="text">
      <string>Randomize</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="dStarButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>20</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>D*</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="startMovingButton">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>20</y>
+      <width>151</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Moving!</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pausePlayButton">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>20</y>
+      <width>101</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pause/Play</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="planningSpeedSlider">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>70</y>
+      <width>160</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>1060</x>
+      <y>50</y>
+      <width>121</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Planning Speed</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>1060</x>
+      <y>90</y>
+      <width>121</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Motion Speed</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="motionSpeedSlider">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>110</y>
+      <width>160</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="qLearningButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>20</y>
+      <width>121</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Q-Learning</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="printPathButton">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>140</y>
+      <width>171</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Print Path</string>
     </property>
    </widget>
   </widget>
@@ -232,14 +339,6 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QCustomPlot</class>
-   <extends>QWidget</extends>
-   <header>qcustomplot.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
